rearrange some varible names/values
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 WORKDIR: "/home/gregf/staging"
-BASE: "/stage5"
-CONFIGS: "/etc/amd64"
-SCRIPTS: "/scripts"
-STAGEURL: "http://mirrors.kernel.org/gentoo/releases/amd64/current/stage3-amd64-20090716.tar.bz2"
+BASE: "/home/gregf/staging/stage5"
+CONFIGS: "/home/gregf/code/active/athenry/etc/amd64/"
+SCRIPTS: "/home/gregf/code/active/athenry/scripts/"
+STAGEURL: "http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/stage3-amd64-20090813.tar.bz2"
 SNAPSHOTURL: "http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2"
