--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
-WORKDIR: "/home/gregf/staging"
-BASE: "/home/gregf/staging/stage5"
-CONFIGS: "/home/gregf/code/active/athenry/etc/amd64/"
-SCRIPTS: "/home/gregf/code/active/athenry/scripts/"
-STAGEURL: "http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/stage3-amd64-20090813.tar.bz2"
-SNAPSHOTURL: "http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2"
+workdir: "/home/gregf/staging"
+base: "/home/gregf/staging/stage5"
+configs: "/home/gregf/code/active/athenry/etc/amd64/"
+scripts: "/home/gregf/code/active/athenry/scripts/"
+stageurl: "http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/stage3-amd64-20090813.tar.bz2"
+snapshoturl: "http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2"
+overlays: [gregf mpd]
