--- a/config.yml
+++ b/config.yml
@@ -2,10 +2,11 @@ workdir: "/home/gregf/staging"
 chrootdir: "stage5"
 configs: "/home/gregf/code/active/athenry/etc/amd64"
 scripts: "/home/gregf/code/active/athenry/scripts"
-stageurl: "http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/stage3-amd64-20090813.tar.bz2"
+stageurl: "http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/stage3-amd64-20090827.tar.bz2"
 snapshoturl: "http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2"
-verbose: "true"
+verbose: "false"
 logdir: "log"
 logfile: "athenry.log"
 overlays: [gregf mpd]
 pkgmanager: "paludis"
+sets: [stage4 stage5]
