--- a/conf/athenry.conf
+++ b/conf/athenry.conf
@@ -5,10 +5,10 @@ verbose = true
 arch = amd64
 
 [stage]
-url = http://mirrors.kernel.org/gentoo/releases/amd64/autobuilds/current-stage3/install-amd64-minimal-20100121.iso
+url = http://gentoo.osuosl.org/releases/amd64/current-stage3/stage3-amd64-20100121.tar.bz2
 
 [snapshot]
-url = http://mirrors.kernel.org/gentoo/snapshots/portage-latest.tar.bz2
+url = http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2
 
 [overlays]
 sunrise =
