http_proxy and ftp_proxy support
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/athenry.conf
+++ b/conf/athenry.conf
@@ -2,7 +2,7 @@
 workdir = /var/tmp/athenry
 timezone = EST5EDT
 verbose = true
-arch = amd64
+config_profile = amd64
 
 [stage]
 url = http://gentoo.osuosl.org/releases/amd64/current-stage3/stage3-amd64-20100121.tar.bz2
@@ -19,3 +19,7 @@ sync = rsync://rsync.gentoo.org/gentoo-portage
 sets = stage4 stage5
 package_manager = paludis
 profile = default/linux/amd64/10.0
+
+[proxy]
+http_proxy =
+ftp_proxy =
