added datetime_format option
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/athenry.conf
+++ b/conf/athenry.conf
@@ -3,6 +3,7 @@ workdir = /var/tmp/athenry
 timezone = EST5EDT
 verbose = true
 config_profile = amd64
+datetime_format = %a %b %d, %I:%M%p
 
 [stage]
 url = http://gentoo.osuosl.org/releases/amd64/current-stage3/stage3-amd64-20100121.tar.bz2
