move logs to /var/log/athenry by default, snapshotdir is named named snapshots
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/internal.conf
+++ b/conf/internal.conf
@@ -4,10 +4,10 @@
 
 [paths]
 scripts = scripts
-logdir = /var/log
+logdir = /var/log/athenry
 statedir = /var/state
 stagedir = stages
-snapshotdir = portage
+snapshotdir = snapshots 
 snapshotcache cache
 
 [bools]
