states should go into a athenry subdirectory
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/internal.conf
+++ b/conf/internal.conf
@@ -5,7 +5,7 @@
 [paths]
 scripts = scripts
 logdir = /var/log/athenry
-statedir = /var/state
+statedir = /var/state/athenry
 stagedir = stages
 snapshotdir = snapshots 
 snapshotcache cache
