added error file
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/internal.conf
+++ b/conf/internal.conf
@@ -10,6 +10,9 @@ stagedir = stages
 snapshotdir = snapshots 
 snapshotcache cache
 
+[files]
+errors = failures.log
+
 [bools]
 nopaludis = false
 freshen = false
