fix overlay example to point to xml file
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/conf/athenry.conf
+++ b/conf/athenry.conf
@@ -13,7 +13,7 @@ url = http://gentoo.osuosl.org/snapshots/portage-latest.tar.bz2
 
 [overlays]
 sunrise =
-mpd = git://github.com/gregf/mpd.git
+mpd = http://github.com/gregf/mpd/raw/master/mpd.xml 
 
 [gentoo]
 sync = rsync://rsync.gentoo.org/gentoo-portage
